finish supp fig 4B

--- a/scripts/integrated_dataset/pymtn_park_03_plot_metaneighbor.Rmd
+++ b/scripts/integrated_dataset/pymtn_park_03_plot_metaneighbor.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Plot MetaNeighbor output (comparison with Park et al. dataset)"
+title: "Plot pyMetaNeighbor with Park et al. dataset (Supp Fig 4B)"
 author: "Salomé Carcy"
 date: "`r format(Sys.Date(), '%d %B %Y')`"
 output:
@@ -28,10 +28,15 @@ knitr::opts_chunk$set(
 ## Import librairies
 ```{r import-librairies}
 library(ggplot2)
+library(cowplot)
 library(tidyverse)
 library(dplyr)
 library(Seurat)
 library(SCpubr)
+library(RColorBrewer)
+library(reshape2)
+library(ggrepel)
+library(patchwork)
 
 setwd("~/Projects/HumanThymusProject/")
 source("~/Projects/HumanThymusProject/scripts/colors_universal.R")
@@ -49,7 +54,8 @@ do_DimPlot(
   reduction = "umap_integrated",
   colors.use = cols_integrated,
   legend.position="right"
-)
+) # supp Fig 4A (top)
+
 
 # Park et al. thymocyte data (corresponding to Fig 2C)
 seur_park <- readRDS("./data_github/park_dataset/park_seurat_human_thymocytes.rds")
@@ -59,245 +65,265 @@ do_DimPlot(
   legend.position="right",
   colors.use = cols_park,
   label=T
+) # supp Fig 4A (bottom)
+```
+
+Import output from metaneighbor. To note, to reproduce Supplementary Fig 4B, you will want to import the output from the slow version of metaneighbor (which needs to be run on a high-performing cluster with the script [pymtn_park_02_run_metaneighbor.py](./pymtn_park_02_run_metaneighbor.py), unless you have a super powerful computer unlike mine). As an alternative, you can also run on your local computer a fast version of metaneighbor (with the script [pymtn_park_02_run_metaneighbor.ipynb](./pymtn_park_02_run_metaneighbor.ipynb)) and import that `.csv` file as input (commented out below).
+```{r import-data-pymtn}
+mtn <- read.csv(
+  # if run on HPC (reproduces Supp Fig 4B)
+  "./data_github/park_dataset/pymtn/human_thym_merged_with_park_pymtn_slow_version_output_240902.csv",
+  # if run on local computer
+  # "./data_github/park_dataset/pymtn/human_thym_merged_with_park_pymtn_fast_version_output_240902.csv",
+  row.names=1
+  )
+mtn <- as.matrix(mtn)
+mtn[1:5,1:5]
+```
+
+
+
+
+# PLOT METANEIGHBOR
+
+## Quick look at heatmap
+```{r mtn-heatmap, fig.height=10, fig.width=10}
+gplots::heatmap.2(
+  mtn,
+  trace = "none",
+  # superimpose a density histogram on color key
+  density.info = "none",
+  # color scale
+  col = rev(colorRampPalette(brewer.pal(11, "RdYlBu"))(100)),
+  key.xlab = "AUROC",
+  key.title = "",
+  # text labels
+  main = "Mouse vs Human innate T (3104 HVGs)",
+  cexRow = 0.6,
+  cexCol = 0.6,
+  # margins
+  margins = c(9, 9)
+)
+```
+
+
+## Define plotting function
+```{r define-function}
+bubble_plot <- function(df, order_x, order_y, label_x, label_y, auroc_min=0.9){
+  
+  # print(head(df))
+  bp.x <- NULL
+  bp.y <- NULL
+  hm.clean <- NULL
+  p <- NULL
+  
+  # x barplot
+  print("barplot x")
+  bp.x <- ggplot(
+    data = df %>% select(var_x, ncells_x) %>% distinct(),
+    aes(x = factor(var_x, levels = order_x), y = ncells_x)
+  ) +
+    geom_bar(
+      stat = "identity",
+      fill = "#bdbdbd"
+    ) +
+    theme_cowplot() +
+    scale_x_discrete(position = "top") +
+    labs(y = "#cells") +
+    theme(
+      axis.text = element_text(size = 15),
+      axis.title.y = element_text(size = 20),
+      axis.title.x = element_blank(),
+      axis.line.x = element_blank(),
+      legend.position = "none",
+      plot.margin = margin(10, 0, 0, 0)
+    )
+  
+  # PROPORTION OF MOUSE GDT CELLS IN EACH CLUSTER
+  print("barplot y")
+  bp.y <- ggplot(
+    data = df %>% select(var_y, ncells_y) %>% distinct(),
+    aes(x = factor(var_y, levels = order_y), y = ncells_y)
+  ) +
+    geom_bar(
+      stat = "identity",
+      fill = "#bdbdbd"
+    ) +
+    theme_cowplot() +
+    scale_x_discrete(position = "top") +
+    labs(y = "#cells") +
+    coord_flip() +
+    theme(
+      axis.title.y = element_blank(),
+      axis.text = element_text(size = 15),
+      axis.text.x = element_text(angle = 45, hjust = 1),
+      axis.title.x = element_text(size = 20),
+      axis.line.y = element_blank(),
+      legend.position = "none"
+    )
+  
+  # BUBBLE PLOT
+  print("bubble plot")
+  hm.clean <- ggplot(df, aes(
+    x = factor(var_x, levels = order_x),
+    y = factor(var_y, levels = order_y)
+  )) +
+    geom_point(aes(size = auroc, color= auroc))+
+    geom_text(
+      data = df %>% filter(auroc > auroc_min) %>% mutate(across("auroc", \(x) round(x, 2))),
+      aes(label = auroc),
+      color = "white"
+    ) +
+    scale_size_continuous(
+      limits = c(0, 1),
+      breaks = seq(0.2, 0.8, by = 0.2),
+      range = c(1, 15)
+    ) +
+    scale_color_gradient2(
+      low="#d9d9d9",
+      mid = "white",
+      high = "#a50f15",
+      midpoint = 0.5,
+      limits = c(0, 1),
+      name = "AUROC",
+      breaks = seq(0, 1, by = 0.2)
+    ) +
+    labs(x = label_x, y = label_y, size = "AUROC") +
+    theme_cowplot() +
+    theme(
+      legend.position = "bottom",
+      legend.key.width = unit(0.8, 'cm'),
+      axis.text = element_text(size = 15),
+      axis.title = element_text(size = 20)
+    )
+  
+  
+  # COMBINE
+  print("combine")
+  p <- (bp.x + plot_spacer() + plot_layout(widths = c(5, 1))) / (hm.clean + bp.y + plot_layout(widths = c(5, 1))) + plot_layout(heights = c(1, 5))
+  return(p)
+}
+```
+
+
+## Prepare data for plotting
+
+### Prepare metadata
+This is the same code chunk as in the script [pymtn_park_01_prepare_data.Rmd](./pymtn_park_01_prepare_data.Rmd).
+```{r}
+# our data: keep only columns of interest
+seur_thymus@meta.data <- seur_thymus@meta.data[,c(
+  "nCount_RNA",
+  "nFeature_RNA",
+  "clusters_integrated_data"
+)]
+colnames(seur_thymus@meta.data) <- c("nCount", "nFeature", "clusters_to_compare")
+seur_thymus@meta.data$clusters_to_compare <- as.character(seur_thymus@meta.data$clusters_to_compare)
+seur_thymus@meta.data$clusters_to_compare <- paste0("c", seur_thymus@meta.data$clusters_to_compare)
+seur_thymus@meta.data$study <- "gapin_data"
+head(seur_thymus@meta.data)
+
+# park data: keep only columns of interest
+seur_park@meta.data <- seur_park@meta.data[,c(
+  "nCount_originalexp",
+  "nFeature_originalexp",
+  "cell_types"
+)]
+colnames(seur_park@meta.data) <- c("nCount", "nFeature", "clusters_to_compare")
+seur_park@meta.data$clusters_to_compare <- as.character(seur_park@meta.data$clusters_to_compare)
+seur_park@meta.data$study <- "park_data"
+head(seur_park@meta.data)
+```
+
+
+### Get number of cells per cluster
+We will generate a dataframe to feed into the `bubble_plot` function, which will generate Supplementary Fig 4B.
+```{r prep-nb-cells-per-cluster}
+mtn.df <- melt(mtn) %>%
+  filter(str_detect(Var1,"gapin_data")) %>%
+  mutate(Var1 = gsub("gapin_data\\|", "", Var1)) %>%
+  filter(str_detect(Var2, "park_data")) %>%
+  mutate(Var2 = gsub("park_data\\.", "", Var2)) %>%
+  # rename Park clusters (some symbols got removed)
+  mutate(Var2=case_when(
+    Var2=="CD4.T" ~ "CD4+T",
+    Var2=="CD8.T" ~ "CD8+T",
+    Var2=="CD8αα.I." ~ "CD8αα(I)",
+    Var2=="CD8αα.II." ~ "CD8αα(II)",
+    Var2=="DN.P." ~ "DN(P)",
+    Var2=="DN.Q." ~ "DN(Q)",
+    Var2=="DN.early." ~ "DN(early)",
+    Var2=="DP.P." ~ "DP(P)",
+    Var2=="DP.Q." ~ "DP(Q)",
+    Var2=="T.agonist." ~ "T(agonist)",
+    Var2=="Treg.diff." ~ "Treg(diff)",
+    Var2=="αβT.entry." ~ "αβT(entry)",
+    .default=Var2
+  )) %>%
+  # add nb of cells per cluster (from our dataset) to dataframe
+  left_join(
+    as.data.frame(table(seur_thymus$clusters_to_compare)),
+    by="Var1"
+    ) %>%
+  # rename a few columns
+  rename(
+    var_x = Var1,
+    Var1 = Var2,
+    auroc = value,
+    ncells_x = Freq
+  ) %>%
+  # add nb of cells per cluster (from park dataset) to dataframe
+  left_join(
+    as.data.frame(table(seur_park$clusters_to_compare)),
+    by="Var1"
+    ) %>%
+  # rename a few columns again
+  rename(
+    var_y=Var1,
+    ncells_y=Freq
+    )
+
+# sanity check
+mtn.df
+```
+
+
+## Plot Supplementary Figure 4B
+```{r plot-supp-fig-4b, fig.width=15, fig.height=15}
+order_gapin <- paste0("c", 0:17)
+order_park <- rev(c(
+  "DN(early)",
+  "DN(P)",
+  "DN(Q)",
+  "DP(P)",
+  "DP(Q)",
+  "αβT(entry)",
+  "T(agonist)",
+  "CD8αα(I)",
+  "CD8αα(II)",
+  "γδT",
+  "Treg(diff)",
+  "Treg",
+  "CD4+T",
+  "CD8+T",
+  "Th17",
+  "NKT"
+))
+
+bubble_plot(
+  df=mtn.df,
+  order_x = order_gapin,
+  order_y = order_park,
+  label_x = "",
+  label_y = "Park clusters",
+  auroc_min= 0.9
 )
 ```
 
 
 
 
-# FUNCTIONS
-```{r define-functions}
-
-```
-
-
-
-
-# ANALYSIS
-
-## Analysis 1
-```{r analysis-1}
-
-```
-
-
-## Analysis 2
-```{r analysis-2}
-
-```
-
-
-
------------
-
-# COPY PASTE FROM SCRIPTS
-```{r park-metaneighbor}
-# Convert seurat count matrix to SummarizedExperiment object
-table(seur.merged2$cell_type, useNA="ifany")
-table(seur.merged2$study, useNA="ifany")
-count2 <- SummarizedExperiment(assays=seur.merged2@assays[["RNA"]]@counts,
-                               colData=seur.merged2@meta.data[,c("cell_type", "study")])
-
-# sanity check
-# table(colnames(seur.merged2@assays[["RNA"]]@counts) == rownames(seur.merged2@meta.data))
-seur.merged2 <- readRDS("../../data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_elzar/seuratobj_merged.rds")
-count2 <- readRDS("../../data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_elzar/summarizedexpobj_merged.rds")
-
-# export to run on Elzar with slow version
-# SeuratDisk::SaveH5Seurat(seur.merged2,
-#                          filename = "../../data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_elzar/seuratobj_convert.h5Seurat")
-# SeuratDisk::Convert("../../data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_elzar/seuratobj_convert.h5Seurat", dest = "h5ad")
-# VariableFeatures(seur.merged2)
-# df <- data.frame("features"=rownames(seur.merged2), "highly_variable"=(rownames(seur.merged2) %in% VariableFeatures(seur.merged2)))
-# write.csv(df, "../../data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_elzar/list_hvg.csv")
-# write.table(VariableFeatures(seur.merged2), "../../data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_elzar/list_hvg.txt",
-#             sep="\t", row.names=FALSE, col.names=FALSE, quote=FALSE)
-
-
-# Run metaneighbor
-mtn2 <- MetaNeighborUS(var_genes=hvg.union2,
-                       dat=count2,
-                       study_id=seur.merged2$study,
-                       cell_type=seur.merged2$cell_type,
-                       one_vs_best = FALSE,
-                       fast_version=TRUE)
-
-# checkpoint save
-# saveRDS(mtn2, "~/Projects/HumanThymusProject/data/human-thymus/HumanData_16_ParkIntegration/mtn_park.rds")
-# mtn2 <- readRDS("~/Projects/HumanThymusProject/data/human-thymus/HumanData_16_ParkIntegration/mtn_park.rds")
-
-# slow version from Elzar
-mtn2 <- read_csv("~/Projects/HumanThymusProject/data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_elzar/output/pymtn_park_slowversion_2023-07-11.csv")
-mtn2 <- as.data.frame(mtn2)
-rownames(mtn2) <- mtn2[,1]
-mtn2 <- mtn2[,-1]
-mtn2 <- as.matrix(mtn2)
-
-
-# Heatmap ####
-jpeg("~/Projects/HumanThymusProject/data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_elzar/pymtn_slowversion_fulltree.jpeg",
-     width=1000, height=1000, res=150)
-heatmap.2(mtn2,
-          # trace
-          trace="none",
-          # Rowv=FALSE,
-          # Colv=FALSE,
-          # superimpose a density histogram on color key
-          density.info="none",
-          # color scale
-          col=rev(colorRampPalette(brewer.pal(11,"RdYlBu"))(100)),
-          breaks=seq(0,1,length=101),
-          #na.rm=F,
-          na.color="grey",
-          # text labels
-          main="Comparison with Park thymocytes",
-          cexRow=0.6,
-          cexCol=0.6,
-          # margins
-          margins=c(7,7))
-dev.off()
-
-
-# Reformat AUROC into df
-library(reshape2)
-library(ggrepel)
-mtn.df <- melt(mtn2)
-mtn.df <- mtn.df %>%
-  filter(str_detect(Var1,"gapin_data")) %>%
-  mutate(Var1 = gsub("gapin_data\\|", "", Var1)) %>%
-  filter(str_detect(Var2, "park_data")) %>%
-  mutate(Var2 = gsub("park_data\\|", "", Var2))
-
-interesting_clusters <- mtn.df %>%
-  group_by(Var1) %>%
-  top_n(1, value)
-
-ggplot(mtn.df, aes(x=factor(Var1, level=paste0("c", 0:17)),
-                   y=value,
-                   color=factor(Var2, level=names(cols_park))))+
-  geom_hline(yintercept=0.9, linetype="dashed", color="grey")+
-  geom_hline(yintercept=0.5, linetype="dashed", color="grey")+
-  geom_point()+
-  geom_text_repel(data = interesting_clusters,
-                  aes(label = Var2), nudge_y=0.1, show.legend=FALSE)+
-  scale_color_manual(values=cols_park, name="Park clusters")+
-  ylim(c(0,1.2))+
-  labs(x="Gapin clusters", y="AUROC")+
-  theme_cowplot()
-# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_thymocytesonly_ggplot.jpeg", width=8, height=5)
-
-# Get number of cells per gapin cluster and per park cluster
-mtn.df <- mtn.df %>%
-  left_join(as.data.frame(table(seur.thymus$cell_type)), by="Var1") %>%
-  dplyr::rename(ncells_gapin=Freq) %>%
-  left_join(as.data.frame(table(seur.park.thymocytes$cell_type)) %>% dplyr::rename(Var2=Var1), by="Var2") %>%
-  dplyr::rename(ncells_park=Freq)
-
-bp.x <-
-  ggplot(
-    data = mtn.df %>% select(Var1, ncells_gapin) %>% distinct(),
-    aes(x = factor(Var1, levels = paste0("c", 0:17)), y = ncells_gapin)
-  ) +
-  geom_bar(stat = "identity", fill = "#bdbdbd") + theme_cowplot() +
-  scale_x_discrete(position = "top") +
-  scale_y_continuous(limits = c(0, 6500), breaks = seq(0,6000, length.out=3)) +
-  labs(y = "#cells") +
-  theme(
-    #axis.title.y = element_blank(),
-    # axis.text.y = element_blank(),
-    # axis.ticks.y = element_blank(),
-    axis.text.x = element_text(size = 15),
-    axis.title.x = element_blank(),
-    axis.line.x = element_blank(),
-    legend.position = "none"
-  ) #+
-# scale_fill_distiller(name = "Value", palette = "Greys", direction = 1)
-
-# Change order of Park clusters
-order_park <- c("DN(early)", "DN(P)", "DN(Q)", "DP(P)", "DP(Q)", "αβT(entry)", "T(agonist)", "CD8αα(I)", "CD8αα(II)",
-                "γδT", "Treg(diff)", "Treg", "CD4+T", "CD8+T", "Th17", "NKT")
-bp.y <- ggplot(
-  data=mtn.df %>% select(Var2, ncells_park) %>% distinct(), 
-  aes(x=factor(Var2, levels=rev(order_park)), y=ncells_park)
-  )+
-  geom_bar(stat="identity", fill="#bdbdbd") +
-  scale_x_discrete(position="top") + labs(y="#cells")+ coord_flip() + theme_cowplot()+
-  scale_y_continuous(limits = c(0, 12500), breaks = seq(0,10000, length.out=3)) +
-  theme(axis.title.y = element_blank(),
-        axis.text.y = element_text(size=15), #axis.ticks.x = element_blank(),
-        # axis.text.x = element_blank(),
-        #axis.title.x = element_blank(),
-        axis.line.y=element_blank(),
-        legend.position = "none")# +
-# scale_fill_distiller(name = "Value", palette = "Greys", direction = 1)
-
-# Bubble plot
-library(scales)
-# hm.clean <- ggplot(mtn.df, aes(x=factor(Var1, levels=paste0("c", 0:17)),
-#                                y=factor(Var2, levels=rev(order_park)))) +
-#   geom_point(aes(size=value, color=value))+
-#   geom_text(data=mtn.df %>% filter(value>0.90) %>% mutate(across("value", \(x) round(x,2))), aes(label=value), color="white")+
-#   # scales
-#   scale_size_continuous(limits=c(0,1), breaks=seq(0.2,0.8, by=0.2), range = c(1, 15))+
-#   scale_colour_gradient2(low="#d9d9d9", mid="white", high="#a50f15", midpoint=0.5, limits=c(0,1), name="AUROC", breaks=seq(0,1, by=0.2))+
-#   # themes
-#   labs(x="",y="Park clusters", size="AUROC")+
-#   theme_cowplot()+
-#   theme(legend.position="bottom",
-#         legend.key.width = unit(1, 'cm'),
-#         axis.title = element_text(size=20),
-#         axis.text = element_text(size=15))
-
-hm.clean <- ggplot(mtn.df, aes(x=factor(Var1, levels=paste0("c", 0:17)),
-                               y=factor(Var2, levels=rev(order_park)))) +
-  geom_point(aes(size = abs(value-0.5), fill = value), color="black", shape=21) +
-  geom_text(data=mtn.df %>% filter(value>0.90) %>% mutate(across("value", \(x) round(x,2))), aes(label=value), color="white")+
-  # scales
-  scale_size_continuous(limits=c(0,0.5), breaks=seq(0, 0.5, by = 0.1), range = c(1, 15))+
-      scale_fill_gradient2(
-        low = "#2166ac",
-        mid = "white",
-        high = "#a50f15",
-        midpoint = 0.5,
-        limits = c(0, 1),
-        name = "AUROC",
-        breaks = seq(0, 1, by = 0.2)
-      )+
-  # themes
-  labs(x="Current thesis clusters",y="Park clusters", size="AUROC")+
-  theme_cowplot()+
-  theme(legend.position="bottom",
-        legend.key.width = unit(1, 'cm'),
-        axis.title = element_text(size=20),
-        axis.text = element_text(size=15))
-```
-
-```{r, fig.height=8, fig.width=8}
-# plot_grid(bp.x+theme(plot.margin = margin(b=-5,unit="cm")),
-#           NULL,
-#           hm.clean+theme(plot.margin = margin(t=-5, r=-5, unit="cm")),
-#           bp.y,
-#           align="hv", axis="tblr",
-#           ncol=2, nrow=2,
-#           rel_widths=c(2.5,1), rel_heights=c(1,3))
-# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_bubbleplot3.jpeg", width=12, height=12)
-# 
-# ggdraw()+
-#   draw_plot(bp.x, x=0.07, y=0.7, width=0.63, height=0.2)+
-#   draw_plot(bp.y, x=0.7, y=0.07, width=0.2, height=0.63)+
-#   draw_plot(hm.clean, x=0, y=0, width=0.7, height=0.7)
-# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_bubbleplot2.jpeg", width=12, height=12)
-
-library(patchwork)
-(bp.x+plot_spacer() + plot_layout(widths = c(5, 1))) / (hm.clean + bp.y + plot_layout(widths = c(5, 1))) + plot_layout(heights = c(1, 5))
-# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_16_ParkIntegration/metaneighbor_elzar/pymtn_bubbleplot1.pdf", width=14, height=14)
-ggsave("~/Projects/phd/data/figures/chapter_02/figs_unfinished/section2/ch2_fig17_pymtn_bubbleplot.pdf", width=14, height=14)
-```
-
-
 # SESSION INFO
 ```{r}
 sessionInfo()
 ```
-
-
